SimpleC/Grammar/SimpleCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 Grammar\\SimpleC.g 2015-10-06 22:22:16

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


#pragma warning disable 3021


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  SimpleC.Grammar 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class SimpleCParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ASSIGN", "BIT_AND", "BIT_NOT", "BIT_OR", "BIT_XOR", "BOOL_AND", "BOOL_NOT", "BOOL_OR", "DEC_POST", "DEC_PRE", "DEREF", "DIV", "EQUAL", "EXPRESSION", "FUNC_BODY", "FUNC_CALL", "FUNC_DECL", "FUNC_DEF", "GREATER", "GREATER_OR_EQUAL", "IDENT", "INC_POST", "INC_PRE", "INTEGER", "Identifier", "Int", "Integer", "LESS", "LESS_OR_EQUAL", "MOD", "MUL", "NOT_EQUAL", "PARAM_LIST", "PARAM_SPEC_LIST", "PROGRAM", "REF", "SHIFT_LEFT", "SHIFT_RIGHT", "SIZEOF_EXPR", "SIZEOF_TYPE", "STATEMENT", "STRUCT_DEREF", "STRUCT_MEMBER", "SUB", "SUBSCRIPT", "SizeOf", "TYPECAST", "TYPE_SPEC", "U_MINUS", "U_PLUS", "VAR_CALL", "VAR_DECL", "VAR_DEF", "VAR_SPEC", "Void", "Whitespace", "'!'", "'('", "')'", "'++'", "','", "'--'", "'->'", "'.'", "';'", "'['", "']'", "'{'", "'}'", "'~'"
	};
	public const int EOF=-1;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int ADD=4;
	public const int ASSIGN=5;
	public const int BIT_AND=6;
	public const int BIT_NOT=7;
	public const int BIT_OR=8;
	public const int BIT_XOR=9;
	public const int BOOL_AND=10;
	public const int BOOL_NOT=11;
	public const int BOOL_OR=12;
	public const int DEC_POST=13;
	public const int DEC_PRE=14;
	public const int DEREF=15;
	public const int DIV=16;
	public const int EQUAL=17;
	public const int EXPRESSION=18;
	public const int FUNC_BODY=19;
	public const int FUNC_CALL=20;
	public const int FUNC_DECL=21;
	public const int FUNC_DEF=22;
	public const int GREATER=23;
	public const int GREATER_OR_EQUAL=24;
	public const int IDENT=25;
	public const int INC_POST=26;
	public const int INC_PRE=27;
	public const int INTEGER=28;
	public const int Identifier=29;
	public const int Int=30;
	public const int Integer=31;
	public const int LESS=32;
	public const int LESS_OR_EQUAL=33;
	public const int MOD=34;
	public const int MUL=35;
	public const int NOT_EQUAL=36;
	public const int PARAM_LIST=37;
	public const int PARAM_SPEC_LIST=38;
	public const int PROGRAM=39;
	public const int REF=40;
	public const int SHIFT_LEFT=41;
	public const int SHIFT_RIGHT=42;
	public const int SIZEOF_EXPR=43;
	public const int SIZEOF_TYPE=44;
	public const int STATEMENT=45;
	public const int STRUCT_DEREF=46;
	public const int STRUCT_MEMBER=47;
	public const int SUB=48;
	public const int SUBSCRIPT=49;
	public const int SizeOf=50;
	public const int TYPECAST=51;
	public const int TYPE_SPEC=52;
	public const int U_MINUS=53;
	public const int U_PLUS=54;
	public const int VAR_CALL=55;
	public const int VAR_DECL=56;
	public const int VAR_DEF=57;
	public const int VAR_SPEC=58;
	public const int Void=59;
	public const int Whitespace=60;

	public SimpleCParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public SimpleCParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return SimpleCParser.tokenNames; } }
	public override string GrammarFileName { get { return "Grammar\\SimpleC.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// Grammar\\SimpleC.g:92:1: public program : ( programStatement )* EOF -> ^( PROGRAM ( programStatement )* ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken EOF2 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> programStatement1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree EOF2_tree = default(CommonTree);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_programStatement=new RewriteRuleSubtreeStream(adaptor,"rule programStatement");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(92, 0);
		try
		{
			// Grammar\\SimpleC.g:92:8: ( ( programStatement )* EOF -> ^( PROGRAM ( programStatement )* ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:93:2: ( programStatement )* EOF
			{
			DebugLocation(93, 2);
			// Grammar\\SimpleC.g:93:2: ( programStatement )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==Int||LA1_0==Void))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Grammar\\SimpleC.g:93:2: programStatement
					{
					DebugLocation(93, 2);
					PushFollow(Follow._programStatement_in_program987);
					programStatement1=programStatement();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_programStatement.Add(programStatement1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(93, 20);
			EOF2=(CommonToken)Match(input,EOF,Follow._EOF_in_program990); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: programStatement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 94:2: -> ^( PROGRAM ( programStatement )* )
			{
				DebugLocation(94, 5);
				// Grammar\\SimpleC.g:94:5: ^( PROGRAM ( programStatement )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(94, 7);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(94, 15);
				// Grammar\\SimpleC.g:94:15: ( programStatement )*
				while ( stream_programStatement.HasNext )
				{
					DebugLocation(94, 15);
					adaptor.AddChild(root_1, stream_programStatement.NextTree());

				}
				stream_programStatement.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(95, 0);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_programStatement();
	partial void LeaveRule_programStatement();

	// $ANTLR start "programStatement"
	// Grammar\\SimpleC.g:97:1: programStatement : ( varDef | funcDecl | funcDef );
	[GrammarRule("programStatement")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> programStatement()
	{
		EnterRule_programStatement();
		EnterRule("programStatement", 2);
		TraceIn("programStatement", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> varDef3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> funcDecl4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> funcDef5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		try { DebugEnterRule(GrammarFileName, "programStatement");
		DebugLocation(97, 0);
		try
		{
			// Grammar\\SimpleC.g:97:17: ( varDef | funcDecl | funcDef )
			int alt2=3;
			try { DebugEnterDecision(2, false);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Grammar\\SimpleC.g:98:2: varDef
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(98, 2);
				PushFollow(Follow._varDef_in_programStatement1009);
				varDef3=varDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varDef3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Grammar\\SimpleC.g:98:11: funcDecl
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(98, 11);
				PushFollow(Follow._funcDecl_in_programStatement1013);
				funcDecl4=funcDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, funcDecl4.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Grammar\\SimpleC.g:98:22: funcDef
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(98, 22);
				PushFollow(Follow._funcDef_in_programStatement1017);
				funcDef5=funcDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, funcDef5.Tree);

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("programStatement", 2);
			LeaveRule("programStatement", 2);
			LeaveRule_programStatement();
		}
		DebugLocation(99, 0);
		} finally { DebugExitRule(GrammarFileName, "programStatement"); }
		return retval;

	}
	// $ANTLR end "programStatement"

	partial void EnterRule_varDef();
	partial void LeaveRule_varDef();

	// $ANTLR start "varDef"
	// Grammar\\SimpleC.g:101:1: varDef : varSpec ';' -> ^( VAR_DEF varSpec ) ;
	[GrammarRule("varDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> varDef()
	{
		EnterRule_varDef();
		EnterRule("varDef", 3);
		TraceIn("varDef", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal7 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> varSpec6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree char_literal7_tree = default(CommonTree);
		RewriteRuleITokenStream stream_69=new RewriteRuleITokenStream(adaptor,"token 69");
		RewriteRuleSubtreeStream stream_varSpec=new RewriteRuleSubtreeStream(adaptor,"rule varSpec");
		try { DebugEnterRule(GrammarFileName, "varDef");
		DebugLocation(101, 0);
		try
		{
			// Grammar\\SimpleC.g:101:7: ( varSpec ';' -> ^( VAR_DEF varSpec ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:102:2: varSpec ';'
			{
			DebugLocation(102, 2);
			PushFollow(Follow._varSpec_in_varDef1026);
			varSpec6=varSpec();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_varSpec.Add(varSpec6.Tree);
			DebugLocation(102, 10);
			char_literal7=(CommonToken)Match(input,69,Follow._69_in_varDef1028); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_69.Add(char_literal7);



			{
			// AST REWRITE
			// elements: varSpec
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 103:3: -> ^( VAR_DEF varSpec )
			{
				DebugLocation(103, 6);
				// Grammar\\SimpleC.g:103:6: ^( VAR_DEF varSpec )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(103, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VAR_DEF, "VAR_DEF"), root_1);

				DebugLocation(103, 16);
				adaptor.AddChild(root_1, stream_varSpec.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("varDef", 3);
			LeaveRule("varDef", 3);
			LeaveRule_varDef();
		}
		DebugLocation(104, 0);
		} finally { DebugExitRule(GrammarFileName, "varDef"); }
		return retval;

	}
	// $ANTLR end "varDef"

	partial void EnterRule_funcDecl();
	partial void LeaveRule_funcDecl();

	// $ANTLR start "funcDecl"
	// Grammar\\SimpleC.g:106:1: funcDecl : typeSpec identifier '(' paramSpecList ')' ';' -> ^( FUNC_DECL typeSpec identifier paramSpecList ) ;
	[GrammarRule("funcDecl")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> funcDecl()
	{
		EnterRule_funcDecl();
		EnterRule("funcDecl", 4);
		TraceIn("funcDecl", 4);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal10 = default(CommonToken);
		CommonToken char_literal12 = default(CommonToken);
		CommonToken char_literal13 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeSpec8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> identifier9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> paramSpecList11 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree char_literal10_tree = default(CommonTree);
		CommonTree char_literal12_tree = default(CommonTree);
		CommonTree char_literal13_tree = default(CommonTree);
		RewriteRuleITokenStream stream_69=new RewriteRuleITokenStream(adaptor,"token 69");
		RewriteRuleITokenStream stream_62=new RewriteRuleITokenStream(adaptor,"token 62");
		RewriteRuleITokenStream stream_63=new RewriteRuleITokenStream(adaptor,"token 63");
		RewriteRuleSubtreeStream stream_paramSpecList=new RewriteRuleSubtreeStream(adaptor,"rule paramSpecList");
		RewriteRuleSubtreeStream stream_typeSpec=new RewriteRuleSubtreeStream(adaptor,"rule typeSpec");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
		try { DebugEnterRule(GrammarFileName, "funcDecl");
		DebugLocation(106, 0);
		try
		{
			// Grammar\\SimpleC.g:106:9: ( typeSpec identifier '(' paramSpecList ')' ';' -> ^( FUNC_DECL typeSpec identifier paramSpecList ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:107:2: typeSpec identifier '(' paramSpecList ')' ';'
			{
			DebugLocation(107, 2);
			PushFollow(Follow._typeSpec_in_funcDecl1048);
			typeSpec8=typeSpec();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_typeSpec.Add(typeSpec8.Tree);
			DebugLocation(107, 11);
			PushFollow(Follow._identifier_in_funcDecl1050);
			identifier9=identifier();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_identifier.Add(identifier9.Tree);
			DebugLocation(107, 22);
			char_literal10=(CommonToken)Match(input,62,Follow._62_in_funcDecl1052); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_62.Add(char_literal10);

			DebugLocation(107, 26);
			PushFollow(Follow._paramSpecList_in_funcDecl1054);
			paramSpecList11=paramSpecList();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_paramSpecList.Add(paramSpecList11.Tree);
			DebugLocation(107, 40);
			char_literal12=(CommonToken)Match(input,63,Follow._63_in_funcDecl1056); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_63.Add(char_literal12);

			DebugLocation(107, 43);
			char_literal13=(CommonToken)Match(input,69,Follow._69_in_funcDecl1057); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_69.Add(char_literal13);



			{
			// AST REWRITE
			// elements: identifier, typeSpec, paramSpecList
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 108:3: -> ^( FUNC_DECL typeSpec identifier paramSpecList )
			{
				DebugLocation(108, 6);
				// Grammar\\SimpleC.g:108:6: ^( FUNC_DECL typeSpec identifier paramSpecList )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(108, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUNC_DECL, "FUNC_DECL"), root_1);

				DebugLocation(108, 18);
				adaptor.AddChild(root_1, stream_typeSpec.NextTree());
				DebugLocation(108, 27);
				adaptor.AddChild(root_1, stream_identifier.NextTree());
				DebugLocation(108, 38);
				adaptor.AddChild(root_1, stream_paramSpecList.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("funcDecl", 4);
			LeaveRule("funcDecl", 4);
			LeaveRule_funcDecl();
		}
		DebugLocation(109, 0);
		} finally { DebugExitRule(GrammarFileName, "funcDecl"); }
		return retval;

	}
	// $ANTLR end "funcDecl"

	partial void EnterRule_funcDef();
	partial void LeaveRule_funcDef();

	// $ANTLR start "funcDef"
	// Grammar\\SimpleC.g:111:1: funcDef : typeSpec identifier '(' paramSpecList ')' '{' funcBody '}' -> ^( FUNC_DEF typeSpec identifier paramSpecList funcBody ) ;
	[GrammarRule("funcDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> funcDef()
	{
		EnterRule_funcDef();
		EnterRule("funcDef", 5);
		TraceIn("funcDef", 5);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal16 = default(CommonToken);
		CommonToken char_literal18 = default(CommonToken);
		CommonToken char_literal19 = default(CommonToken);
		CommonToken char_literal21 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeSpec14 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> identifier15 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> paramSpecList17 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> funcBody20 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
